# spearch

./: .gitignore  README.md  client.py  gui.py  pyproject.toml  user.py  viewer.py
spearch/: client.py  gui.py  user.py
spearch/gui/: custom_widgets.py  login.py  main.py  main_window.py  popups.py  style.py  tabs.py
